--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@angular/platform-browser": "^11.0.8",
     "@angular/platform-browser-dynamic": "^11.0.8",
     "@angular/router": "^11.0.8",
+    "@ngrx/store": "^12.1.0",
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
     "rxjs": "^6.6.3",
